--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
     </div>
 
     <footer class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Martín</a>.</footer>
+
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
