Me falta mostrar/ocultar el pop up del amount

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </header>
       <main class="main">
         <h2 class="main_title">Spendig - Last 7 days</h2>
-        <section class="main_charts"></section>
+        <section class="main_charts">
+          <!-- dynamic graph generation-->
+        </section>
         <hr />
         <section class="main_resume">
           <div class="main_resume_totalMonth">
